docs: include sidebar in home page

--- a/docs/index.njk
+++ b/docs/index.njk
@@ -4,6 +4,7 @@ title: Home
 tags: page
 order: 1
 withHeader: true
+withSideBar: true
 ---
 
 <h1 class="heading-1 text-center mx-auto px-4 mt-12 md:mt-40">
