docs: serve the minify version of prismjs theme

--- a/docs/_layouts/base.njk
+++ b/docs/_layouts/base.njk
@@ -25,7 +25,7 @@
 
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
-    <link href="https://unpkg.com/prismjs@1.20.0/themes/prism-okaidia.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/prismjs@1.28.0/themes/prism-okaidia.min.css" rel="stylesheet">
 
     <link rel="stylesheet" href="{{ '/assets/css/main.css' | url }}"/>
 
