--- a/docs/playground.njk
+++ b/docs/playground.njk
@@ -12,6 +12,8 @@ order: 2
 
 <section class="playground">
 
+    <select id="select-code-example" aria-label="Select a sample code" class="playground__select"></select>
+
     <div id="code-editor" class="code-editor skeleton"></div>
 
     <button id="parse-button" class="hidden btn btn-lg btn-outlined md:flex">
