chore: release 0.1.0 of packages core and readers

--- a/docs/core/getting-started.njk
+++ b/docs/core/getting-started.njk
@@ -3,6 +3,22 @@ title: Getting Started
 order: 2
 ---
 
-<h1 class="heading-2">
+<h1 class="heading-2 mb-10">
     {{ title }}
 </h1>
+
+<section class="mb-10">
+    <h2 class="heading-3 mb-4">
+        Installing with NPM
+    </h2>
+
+    <p class="text-md mb-4">
+        The required version is currently the latest LTS major version of NodeJS (`>=18.0.0`).
+    </p>
+
+{% highlight "bash" %}
+npm i -D @ts-ast-parser/core
+{% endhighlight %}
+</section>
+
+
