--- a/docs/core/getting-started.njk
+++ b/docs/core/getting-started.njk
@@ -9,16 +9,83 @@ order: 2
 
 <section class="mb-10">
     <h2 class="heading-3 mb-4">
-        Installing with NPM
+        Installation
     </h2>
 
     <p class="text-md mb-4">
-        The required version is currently the latest LTS major version of NodeJS (`>=18.0.0`).
+        The required version is currently the latest LTS major version of NodeJS (<code class="code">&gt;=18.0.0</code>).
+    </p>
+
+    <p class="text-md mb-4">
+        npm:
     </p>
 
 {% highlight "bash" %}
 npm i -D @ts-ast-parser/core
 {% endhighlight %}
+
+    <p class="text-md my-4">
+        yarn:
+    </p>
+
+{% highlight "bash" %}
+yarn add -D @ts-ast-parser/core
+{% endhighlight %}
+
+    <p class="text-md my-4">
+        pnpm:
+    </p>
+
+{% highlight "bash" %}
+pnpm add -D @ts-ast-parser/core
+{% endhighlight %}
+</section>
+
+<section class="mb-10">
+    <h2 class="heading-3 mb-4">
+        Using in it with ESM
+    </h2>
+
+    <p class="text-md mb-4">
+        You can provide the array of files that you would like to obtain information of:
+    </p>
+
+{% highlight "js" %}
+import { parseFromFiles } from '@ts-ast-parser/core';
+
+const metadata = parseFromFiles(['test1.ts', 'test2.ts']);
+{% endhighlight %}
+
+    <p class="text-md mb-4">
+        Or you can provide a glob or an array of globs instead:
+    </p>
+
+{% highlight "js" %}
+import { parseFromGlob } from '@ts-ast-parser/core';
+
+const metadata = parseFromGlob('**/*.ts');
+{% endhighlight %}
+
+    <p class="text-md mb-4">
+        Finally, there is also support for getting information from a code snippet:
+    </p>
+
+{% highlight "js" %}
+import { parseFromSource } from '@ts-ast-parser/core';
+
+const metadata = parseFromSource('const foo = true;export { foo };');
+{% endhighlight %}
+</section>
+
+<section class="mb-10">
+    <h2 class="heading-3 mb-4">
+        Using in it with CJS
+    </h2>
+
+    <p class="text-md mb-4">
+        Same as with ESM but instead of using the <code class="code">import</code> keyword, you use
+        <code class="code">require</code>.
+    </p>
 </section>
 
 
