--- a/docs/core/api-reference.njk
+++ b/docs/core/api-reference.njk
@@ -3,6 +3,11 @@ title: API Reference
 order: 3
 ---
 
-<h1 class="heading-2">
+<h1 class="heading-2 mb-10">
     {{ title }}
 </h1>
+
+<div class="alert alert-warning">
+    <span class="mie-4">🚧</span>
+    <span>Still under progress. Soon will be available.</span>
+</div>
