--- a/docs/readers/overview.njk
+++ b/docs/readers/overview.njk
@@ -3,8 +3,11 @@ title: Overview
 order: 1
 ---
 
-<h1 class="heading-2">
+<h1 class="heading-2 mb-10">
     {{ title }}
 </h1>
 
-
+<div class="alert alert-warning">
+    <span class="mie-4">🚧</span>
+    <span>Still under progress. Soon will be available.</span>
+</div>
