docs: add github link in the navbar

--- a/docs/_includes/partials/_navigation.njk
+++ b/docs/_includes/partials/_navigation.njk
@@ -10,11 +10,23 @@
                     Home
                 </a>
             </li>
-            <li class="flex items-center mis-auto">
+
+            <li class="flex items-center mis-auto mie-2">
+                <a
+                    class="github-link"
+                    href="https://github.com/jordimarimon/ts-ast-parser"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    aria-label="Github repository"
+                ></a>
+            </li>
+
+            <li class="flex items-center">
                 <a class="btn" href="{{ '/core/overview/' | url }}">
                     Guides
                 </a>
             </li>
+
             <li class="flex items-center">
                 <a class="btn" target="_blank" href="{{ '/playground/' | url }}" rel="noopener noreferrer">
                     <span>Playground</span>
