docs: fix typo in NodeJS version

--- a/docs/core/getting-started.njk
+++ b/docs/core/getting-started.njk
@@ -13,7 +13,7 @@ order: 2
     </h2>
 
     <p class="text-md mb-4">
-        The required version is currently the latest LTS major version of NodeJS (<code class="code">&gt;=18.0.0</code>).
+        The required version is currently the active LTS of NodeJS (<code class="code">&gt;=18.0.0</code>).
     </p>
 
     <p class="text-md mb-4">
