--- a/docs/core/getting-started.njk
+++ b/docs/core/getting-started.njk
@@ -3,9 +3,9 @@ title: Getting Started
 order: 2
 ---
 
-<h1 class="heading-2 mb-10">
-    {{ title }}
-</h1>
+{% from "macros/heading.njk" import heading %}
+
+{{ heading(title) }}
 
 <section class="mb-10">
     <h2 class="heading-3 mb-4">
@@ -83,9 +83,34 @@ const metadata = parseFromSource('const foo = true;export { foo };');
     </h2>
 
     <p class="text-md mb-4">
-        Same as with ESM but instead of using the <code class="code">import</code> keyword, you use
-        <code class="code">require</code>.
+        You can provide the array of files that you would like to obtain information of:
     </p>
+
+{% highlight "js" %}
+const { parseFromFiles } = require('@ts-ast-parser/core');
+
+const metadata = parseFromFiles(['test1.ts', 'test2.ts']);
+{% endhighlight %}
+
+    <p class="text-md mb-4">
+        Or you can provide a glob or an array of globs instead:
+    </p>
+
+{% highlight "js" %}
+const { parseFromGlob } = require('@ts-ast-parser/core');
+
+const metadata = parseFromGlob(['**/*.ts']);
+{% endhighlight %}
+
+    <p class="text-md mb-4">
+        Finally, there is also support for getting information from a code snippet:
+    </p>
+
+{% highlight "js" %}
+const { parseFromSource } = require('@ts-ast-parser/core');
+
+const metadata = parseFromSource('const foo = true;export { foo };');
+{% endhighlight %}
 </section>
 
 
