--- a/docs/readers/getting-started.njk
+++ b/docs/readers/getting-started.njk
@@ -3,11 +3,9 @@ title: Getting Started
 order: 2
 ---
 
-<h1 class="heading-2 mb-10">
-    {{ title }}
-</h1>
+{% from "macros/under-development-alert.njk" import underDevelopmentAlert %}
+{% from "macros/heading.njk" import heading %}
 
-<div class="alert alert-warning">
-    <span class="mie-4">🚧</span>
-    <span>Still under progress. Soon will be available.</span>
-</div>
+{{ heading(title) }}
+
+{{ underDevelopmentAlert() }}
