--- a/docs/core/overview.njk
+++ b/docs/core/overview.njk
@@ -7,6 +7,10 @@ order: 1
 
 {{ heading(title) }}
 
+<div class="alert alert-warning mb-10">
+    The currently supported TypeScript versions are <code class="code">>=4.8.0</code>.
+</div>
+
 <section class="mb-10">
     <h2 class="heading-3 mb-4">
         What this package does?
