--- a/docs/index.njk
+++ b/docs/index.njk
@@ -12,12 +12,7 @@ withSideBar: true
 </h1>
 
 <p class="text text-lg text-center mx-auto px-4 mt-10">
-    Simplifies the TypeScript AST generated from the TypeScript compiler for information that may be useful.
-
-    <br/>
-    <br/>
-
-    This information then can be used to generate documentation.
+    Reflects a simplified version of the TypeScript AST generated from the TypeScript compiler.
 </p>
 
 <a
