docs: update the documentation website

--- a/docs/_includes/partials/_navigation.njk
+++ b/docs/_includes/partials/_navigation.njk
@@ -22,7 +22,7 @@
             </li>
 
             <li class="flex items-center">
-                <a class="btn" href="{{ '/core/overview/' | url }}">
+                <a class="btn" href="{{ '/overview/' | url }}">
                     Guides
                 </a>
             </li>
