--- a/docs/api-reference.njk
+++ b/docs/api-reference.njk
@@ -1,6 +1,11 @@
 ---
 title: API Reference
 order: 3
+layout: base
+withHeader: true
+withSideBar: true
+tags: module
+module: api-reference
 ---
 
 {% from "macros/under-development-alert.njk" import underDevelopmentAlert %}
