--- a/docs/overview.njk
+++ b/docs/overview.njk
@@ -1,6 +1,11 @@
 ---
 title: Overview
 order: 1
+layout: base
+withHeader: true
+withSideBar: true
+tags: module
+module: overview
 ---
 
 {% from "macros/heading.njk" import heading %}
@@ -9,11 +14,11 @@ order: 1
 
 <section class="mb-10">
     <h2 class="heading-3 mb-4">
-        What this package does?
+        What this library does?
     </h2>
 
     <p class="text-md">
-        This package provides functions to help obtain useful information from your TypeScript source code.
+        This library reflects a simplified version of the TypeScript AST.
     </p>
 </section>
 
@@ -46,7 +51,7 @@ order: 1
     </ul>
 
     <p class="text-md">
-        This package can help you automate the generation of the markdown files that
+        This library can help you automate the generation of the markdown files that
         explain the public API of your project.
     </p>
 </section>
