--- a/docs/_layouts/base.njk
+++ b/docs/_layouts/base.njk
@@ -31,6 +31,7 @@
 
     {% if withSideBar %}
     <script async type="module" src="{{ '/assets/js/side-bar.js' | url }}"></script>
+    <script async type="module" src="{{ '/assets/js/preview.js' | url }}"></script>
     {% endif %}
 
     {% if title == 'Playground' %}
