build: enable verbatimModuleSyntax tsconfig option

--- a/docs/assets/css/utilitites.css
+++ b/docs/assets/css/utilitites.css
@@ -58,6 +58,7 @@
 /////////// EFFECTS
 //////////////////////////////////////////////////////////////////////////////*/
 
+[loading],
 .skeleton {
     position: relative;
     overflow: hidden;
